# random-num-gen-sol

./: Anchor.toml  package.json
programs/random-number-gen/: Cargo.toml
programs/random-number-gen/src/: lib.rs
tests/: random-number-gen.ts
