[package]
name = "random-number-gen"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "random_number_gen"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.30.0"
solana-program = "=1.17"
bytemuck = "1.15.0"
switchboard-on-demand = "0.1.6"

# solana-program = { path = "sdk/program" } 
#  solana-zk-token-sdk = { path = "zk-token-sdk" } 